# ALOHA-piper

./: README.md
act_bringup/: CMakeLists.txt  package.xml
act_bringup/config/: episode_record.yaml  params_1.yaml  params_2.yaml  params_3.yaml  params_4.yaml
act_bringup/launch/: aloha_piper.launch.py  camera_config.py  robot.launch.py
act_description/: CMakeLists.txt  package.xml
act_description/launch/: display.piper.launch.py
act_description/rviz/: piper.rviz
act_description/rviz/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
act_description/rviz/log/: latest_build
act_description/urdf/piper/: piper_description.xacro
act_environment/: package.xml  setup.cfg  setup.py
act_environment/act_environment/: act_environment_node.py
act_environment/act_environment/envs/: _environment.py  act_environment.py
act_environment/act_environment/envs/observers/: _observer.py  aloha_observer.py
act_environment/act_environment/envs/robots/: _action_type.py  _robot.py  dual_piper_robot.py
act_episode_convert/: package.xml  setup.cfg  setup.py
act_episode_convert/act_episode_convert/: episode_convert.py  episode_convert_node.py
act_episode_convert/act_episode_convert/converts/: __init__.py  episode_convert.py
act_episode_convert/act_episode_convert/pipelines/: __init__.py  decompress_image.py  normalize_gripper.py  resample.py  save_aloha_hdf5.py
act_episode_convert/act_episode_convert/utils/: constants.py
act_episode_server/: CMakeLists.txt  package.xml
act_episode_server/include/act_episode_server/: act_episode_record_server.hpp  act_episode_replay_server.hpp
act_episode_server/launch/: record.launch.py  replay.launch.py
act_episode_server/src/: act_episode_record_server.cpp  act_episode_replay_server.cpp
act_example/: package.xml  setup.cfg  setup.py
act_example/act_example/act_data_collection/: act_data_collection.py
act_example/act_example/act_hdf5_viewer/: act_hdf5_viewer.py
act_example/act_example/act_inference/: act_inference.py
act_policy/: package.xml  setup.cfg  setup.py
